force-app/main/default/objects/Merit__c/Merit__c.object-meta.xml
<CustomObject>
    <label>Merit</label>
    <nameField>
        <label>Merit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>