force-app/main/default/objects/Merit__c/fields/Agree_to_Settle__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_Settle__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Counterparty agrees to settlement by checking the box</inlineHelpText>
    <label>Agree to Settle?</label>
    <type>Checkbox</type>
</CustomField>