force-app/main/default/objects/Merit__c/fields/Arbitrated_by__c.field-meta.xml
<CustomField>
    <fullName>Arbitrated_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arbitrated by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Merits</relationshipName>
    <type>Lookup</type>
</CustomField>