force-app/main/default/objects/Merit__c/fields/Arbitration_Date__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Date__c</fullName>
    <label>Arbitration Date</label>
    <type>Date</type>
</CustomField>