force-app/main/default/objects/Merit__c/fields/Arbitrator_Award__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Award__c</fullName>
    <label>Arbitrator Award</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>