force-app/main/default/objects/Merit__c/fields/Arbitrator_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Rationale__c</fullName>
    <label>Arbitrator Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>