force-app/main/default/objects/Merit__c/fields/Claimant_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Rationale__c</fullName>
    <label>Claimant Rationale</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>