force-app/main/default/objects/Merit__c/fields/D_C__c.field-meta.xml
<CustomField>
    <fullName>D_C__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=0151w00000062dX&quot;,&quot;*&quot;,16, 16)
+
IMAGE(&quot;/servlet/servlet.FileDownload?file=0151w00000062W2&quot;, &quot;*&quot; ,16, 16)</formula>
    <label>D/C</label>
    <type>Text</type>
</CustomField>