force-app/main/default/objects/Merit__c/fields/Defendant_Position_Max__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Position_Max__c</fullName>
    <label>Defendant Position - Max</label>
    <summarizedField>Merit_Defendant__c.Defendant_Position__c</summarizedField>
    <summaryForeignKey>Merit_Defendant__c.Merit__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>