force-app/main/default/objects/Merit__c/fields/Defendat_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Defendat_Rationale__c</fullName>
    <label>Defendat Rationale</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>