force-app/main/default/objects/Merit__c/fields/Provisional_Actual_Merit__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Actual_Merit__c</fullName>
    <description>Provisional / actual merit</description>
    <label>Provisional / Actual Merit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>