force-app/main/default/objects/Merit__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Merits</relationshipLabel>
    <relationshipName>Merits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>