force-app/main/default/objects/Merit__c/fields/Schedule_of_Losses__c.field-meta.xml
<CustomField>
    <fullName>Schedule_of_Losses__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule of Losses</label>
    <referenceTo>Schedule_of_Losses__c</referenceTo>
    <relationshipLabel>Merits</relationshipLabel>
    <relationshipName>Merits</relationshipName>
    <type>Lookup</type>
</CustomField>