force-app/main/default/objects/Merit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negotiating</fullName>
                <default>true</default>
                <label>Negotiating</label>
            </value>
            <value>
                <fullName>Referred to Arbitration</fullName>
            </value>
            <value>
                <fullName>Arbitration Doc Prep</fullName>
            </value>
            <value>
                <fullName>Arbitrating</fullName>
            </value>
            <value>
                <fullName>Arbitration Final Offers</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Arbitrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>