force-app/main/default/objects/Merit__c/fields/Would_you_like_to_Settle__c.field-meta.xml
<CustomField>
    <fullName>Would_you_like_to_Settle__c</fullName>
    <inlineHelpText>Yes or No</inlineHelpText>
    <label>Would you like to Settle?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>