force-app/main/default/objects/Merit__c/validationRules/Arbitrator_Percentage_Value_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Arbitrator_Percentage_Value_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 Arbitrator_Award__c &gt; 1.0,
	Arbitrator_Award__c &lt; 0.0
)</errorConditionFormula>
    <errorDisplayField>Arbitrator_Award__c</errorDisplayField>
    <errorMessage>Please enter a value between 0 - 100</errorMessage>
</ValidationRule>