force-app/main/default/objects/Merit__c/validationRules/Submit_Defendant_Position_not_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Submit_Defendant_Position_not_changed</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISCHANGED(Defendant_Position__c)) &amp;&amp; 
NOT(ISCHANGED(Submit_Defendant__c)) &amp;&amp; Submit_Defendant__c = TRUE
&amp;&amp; NOT(ISNEW())</errorConditionFormula>
    <errorDisplayField>Defendant_Position__c</errorDisplayField>
    <errorMessage>You have not entered a new offer and you cannot resubmit the same value.</errorMessage>
</ValidationRule>