force-app/main/default/objects/Merit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Related_Case__c</columns>
    <columns>Schedule_of_Losses__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Defendant_Position__c</columns>
    <columns>Claimant_Position__c</columns>
    <columns>Arbitrator_Award__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>